--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-node_modules
-coverage
-.idea
-npm-debug.log
 .DS_Store
-dist
-dbconfig1.js
-dump
-build
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
